<resources>
    <string name="app_name">UiTwo</string>
    <string name="proceed">Proceed!</string>
    <string name="application_for_employment">Application for Employment</string>
    <string name="position_desired">Position Desired: </string>
    <string name="availablility_date">Availablility Date: </string>
    <string name="desired_salary">Desired Salary: </string>
    <string name="personal_information">Personal Information</string>
    <string name="last_name">Last Name: </string>
    <string name="first_name">First Name: </string>
    <string name="middle_name">Middle Name: </string>
    <string name="address">Address: </string>
    <string name="city">City: </string>
    <string name="state">State: </string>
    <string name="zip_code">Zip Code: </string>
    <string name="home_phone">Home Phone: </string>
    <string name="cell_phone">Cell Phone: </string>
    <string name="email_address">Email Address: </string>
    <string name="socail_security_number">Socail Security Number: </string>
    <string name="are_you_a_us_citizen">Are you a US Citizen? </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="felony">Have you ever been convicted of a felony? </string>
    <string name="if_selected">If selected for employment, are you willing to submit to a pre-employment drug test?</string>
    <string name="next_page">Next Page</string>
    <string name="add_education_details">Add Education</string>
    <string name="add_employment_button">Add Employment</string>
    <string name="add_references">Add References</string>
    <string name="all_done_here">All Done Here</string>
    <string name="education_details">Education Details</string>
    <string name="school_name">School Name: </string>
    <string name="location">Location: </string>
    <string name="years_attended">Years Attended:</string>
    <string name="degree_received">Degree Received:</string>
    <string name="add_another_school">Add Another School</string>
    <string name="back">Back</string>
    <string name="major">Major</string>
    <string name="add_employment_details">Add Employment Details</string>
    <string name="company_name">Company Name:</string>
    <string name="inclusive_dates">Inclusive Dates</string>
    <string name="work_phone">Work Phone:</string>
    <string name="pay_range">Pay Range:</string>
    <string name="company_address">Company Address:</string>
    <string name="position">Position:</string>
    <string name="duties_performed">Duties Performed:</string>
    <string name="supervisor">Supervisor\'s Name and Title:</string>
    <string name="reason_for_leaving">Reason for leaving?</string>
    <string name="may_we_contact_them">May we contact them?</string>
    <string name="add_another_employment">Add Another Employment</string>
    <string name="add_reference">Add Reference</string>
    <string name="name">Name:</string>
    <string name="title">Title:</string>
    <string name="add_another_reference">Add Another Reference</string>
    <string name="certify">I certify that all answers given here are true to the best of my knowledge.</string>
    <string name="authorize">I authorize investigation of all statements contained in this application as may be necessary in arriving at an employment decision.</string>
    <string name="in_the_event">In the event of employment, I understand that false or misleading information given in my application or interview(s) may result in discharge.</string>
    <string name="acknowledgement_and_authorization">Acknowledgement and Authorization</string>
    <string name="signature">Signature</string>
    <string name="date">Date:</string>
</resources>