<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:paddingTop="50dp"
    android:paddingBottom="50dp"
    android:backgroundTint="@color/blue_ish"
    tools:context=".ActivityAddEmployment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_employment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_employment_details"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_employment" />

        <EditText
            android:id="@+id/inclusive_dates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inclusive_dates"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_name" />

        <EditText
            android:id="@+id/pay_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pay_range"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inclusive_dates" />

        <EditText
            android:id="@+id/work_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/work_phone"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pay_range" />

        <EditText
            android:id="@+id/company_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_address"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/work_phone" />

        <EditText
            android:id="@+id/company_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_address" />

        <EditText
            android:id="@+id/company_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_city" />

        <EditText
            android:id="@+id/company_zip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zip_code"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_state" />

        <EditText
            android:id="@+id/position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/position"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_zip" />

        <EditText
            android:id="@+id/duties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duties_performed"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/position" />

        <EditText
            android:id="@+id/supervisor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/supervisor"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/duties" />

        <EditText
            android:id="@+id/reason_for_leaving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reason_for_leaving"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/supervisor" />

        <EditText
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/may_we_contact_them"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reason_for_leaving" />

        <CheckBox
            android:id="@+id/checkbox_yes_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/checkBox_no_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/contact" />

        <CheckBox
            android:id="@+id/checkBox_no_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/checkbox_yes_3"
            app:layout_constraintTop_toBottomOf="@id/contact" />

        <Button
            android:id="@+id/add_another_em_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_another_employment"
            android:textSize="15sp"
            android:backgroundTint="@color/blue_ish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_yes_3" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="15sp"
            android:backgroundTint="@color/blue_ish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_another_em_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>